code optimization and support for docker